[gd_scene load_steps=8 format=2]

[ext_resource path="res://Enemies/SpikyFloaty.gd" type="Script" id=1]
[ext_resource path="res://Enemies/temp_spiky_floaty.png" type="Texture" id=2]
[ext_resource path="res://Enemies/explosion_temp.png" type="Texture" id=3]
[ext_resource path="res://Enemies/explosion_anim.tres" type="Animation" id=4]
[ext_resource path="res://Enemies/shake_anim.tres" type="Animation" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 44.0454

[sub_resource type="CircleShape2D" id=2]
radius = 44.0

[node name="SpikyFloaty" type="KinematicBody2D" groups=[
"enemies",
]]
collision_layer = 4
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="MoveTimer" type="Timer" parent="."]

[node name="PauseTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ExplosionSprite" type="Sprite" parent="."]
visible = false
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/explosion_anim = ExtResource( 4 )
anims/shake_anim = ExtResource( 5 )

[node name="HurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
editor/display_folded = true
enabled = true
cast_to = Vector2( 0, 200 )

[node name="RayCast2D" type="RayCast2D" parent="RayCast2D"]
rotation = 0.785398
enabled = true
cast_to = Vector2( 0, 150 )

[node name="RayCast2D2" type="RayCast2D" parent="RayCast2D"]
rotation = 1.5708
enabled = true
exclude_parent = false
cast_to = Vector2( 0, 150 )

[node name="RayCast2D3" type="RayCast2D" parent="RayCast2D"]
rotation = 2.35619
enabled = true
cast_to = Vector2( 0, 125 )

[node name="RayCast2D4" type="RayCast2D" parent="RayCast2D"]
rotation = 3.14159
enabled = true
cast_to = Vector2( 0, 125 )

[node name="RayCast2D5" type="RayCast2D" parent="RayCast2D"]
rotation = 3.92699
enabled = true
cast_to = Vector2( 0, 125 )

[node name="RayCast2D6" type="RayCast2D" parent="RayCast2D"]
rotation = 4.71239
enabled = true
cast_to = Vector2( 0, 150 )

[node name="RayCast2D7" type="RayCast2D" parent="RayCast2D"]
rotation = 5.49779
cast_to = Vector2( 0, 150 )

[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
[connection signal="timeout" from="PauseTimer" to="." method="_on_PauseTimer_timeout"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_HurtBox_body_entered"]
